--- a/wiki/rzesza_iznotiańska/index.html
+++ b/wiki/rzesza_iznotiańska/index.html
@@ -3,12 +3,12 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Rzesza Iznotiańska - Fangea i inne kontynenty</title>
-<meta property="og:title" content="Rzesza Iznotiańska">
-<meta name="twitter:title" content="Rzesza Iznotiańska">
+<title>III Imperium Iznotiańskie</title>
+<meta property="og:title" content="III Imperium Iznotiańskie">
+<meta name="twitter:title" content="III Imperium Iznotiańskie">
 <meta name="description" content="Rzesza Iznotiańska (niem. Isnotische Reich).">
-<meta property="og:description" content="Rzesza Iznotiańska (niem. Isnotische Reich).">
-<meta name="twitter:description" content="Rzesza Iznotiańska (niem. Isnotische Reich).">
+<meta property="og:description" content="III Imperium Iznotiańskie (niem. Drittes Isnotisches Imperium).">
+<meta name="twitter:description" content="III Imperium Iznotiańskie (niem. Drittes Isnotisches Imperium).">
 <meta property="og:image" content="https://i.ibb.co/HD7ymtGP/iznotiaa-rzesza-final.png">
 <meta name="twitter:image" content="https://i.ibb.co/HD7ymtGP/iznotiaa-rzesza-final.png">
 <meta property="og:image:width" content="3544">
@@ -28,21 +28,21 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Rzesza Iznotiańska</div><span>13.02.2025</span></header>
+<header><div>III Imperium Iznotiańskie</div><span>13.02.2025</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>Rzesza Iznotiańska</caption><tbody><tr><th style="text-align: center;" colspan="2"> Isnotische Reich</th></tr><tr><td style="text-align: center;" colspan="2"> 19XX–19XX </td></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td style="text-align: center;"> <img src="https://i.ibb.co/HD7ymtGP/iznotiaa-rzesza-final.png" data-description="Flaga Rzeszy Iznotiańskiej"></td><td style="text-align: center;"> <img src="https://i.ibb.co/DD0CJj3z/iznotia-rzesza-godlo.png" data-description="Herb Rzeszy Iznotiańskiej" width="70%"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_rzeszy_iznotiańskiej/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_rzeszy_iznotiańskiej/">Herb</a></td></tr></tbody></table></td></tr></tbody></table>
+<table class="infobox"><caption>III Imperium Iznotiańskie</caption><tbody><tr><th style="text-align: center;" colspan="2"> Drittes Isnotisches Imperium</th></tr><tr><td style="text-align: center;" colspan="2"> 19XX–19XX </td></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td style="text-align: center;"> <img src="https://i.ibb.co/HD7ymtGP/iznotiaa-rzesza-final.png" data-description="Flaga III Imperium Iznotiańskiego"></td><td style="text-align: center;"> <img src="https://i.ibb.co/DD0CJj3z/iznotia-rzesza-godlo.png" data-description="Herb III Imperium Iznotiańskiego" width="70%"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_III_imperium_iznotiańskiego">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_III_imperium_iznotiańskiego">Herb</a></td></tr></tbody></table></td></tr></tbody></table>
 
-<p><b>Rzesza Iznotiańska</b> (niem. <i>Isnotische Reich</i>).</p>
- <div id="source-code" style="display:none;">{|infobox Rzesza Iznotiańska
-!t=cc=2 Isnotische Reich !
+<p><b>III Imperium Iznotiańskie</b> (niem. <i>Drittes Isnotisches Imperium</i>).</p>
+ <div id="source-code" style="display:none;">{|infobox III Imperium Iznotiańskie
+!t=cc=2 Drittes Isnotisches Imperium !
 |t=cc=2 19XX–19XX |
 |{ibox
-|t=c [[timg:https://i.ibb.co/HD7ymtGP/iznotiaa-rzesza-final.png|Flaga Rzeszy Iznotiańskiej]] ||t=c [[timg:https://i.ibb.co/DD0CJj3z/iznotia-rzesza-godlo.png|Herb Rzeszy Iznotiańskiej]] |
-|t=c (https://grumqy.github.io/fangea/wiki/flaga_rzeszy_iznotiańskiej/)[Flaga]|| t=c (https://grumqy.github.io/fangea/wiki/herb_rzeszy_iznotiańskiej/)[Herb]|
+|t=c [[timg:https://i.ibb.co/HD7ymtGP/iznotiaa-rzesza-final.png|Flaga III Imperium Iznotiańskiego]] ||t=c [[timg:https://i.ibb.co/DD0CJj3z/iznotia-rzesza-godlo.png|Herb III Imperium Iznotiańskiego]] |
+|t=c (https://grumqy.github.io/fangea/wiki/flaga_III_imperium_iznotiańskiego/)[Flaga]|| t=c (https://grumqy.github.io/fangea/wiki/herb_III_imperium_iznotiańskiego/)[Herb]|
 }|
 |}
 
-'''Rzesza Iznotiańska''' (niem. ''Isnotische Reich'').</div>
+'''III Imperium Iznotiańskie''' (niem. ''Drittes Isnotisches Imperium'').</div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
