--- a/wiki/index.html
+++ b/wiki/index.html
@@ -73,6 +73,7 @@
             </ul> 
             <ul class="article-category">
                 <h1>Postacie</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/hans_von_wepzig/">Hans von Wepzig</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/neku/">Neku</a></li>
             </ul> 
             <ul class="article-category">
