--- a/wiki/index.html
+++ b/wiki/index.html
@@ -75,6 +75,7 @@
                 <h1>Postacie</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/hans_von_wepzig/">Hans von Wepzig</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/neku/">Neku</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/ron_tyler/">Ron Tyler</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Firmy</h1>
