--- a/wiki/neku/index.html
+++ b/wiki/neku/index.html
@@ -27,7 +27,7 @@
 <h1>Spis Treści</h1>
 <ul></ul>
 </nav>
-<article>
+<article class="outdated">
 <header><div>Neku</div><span>13.10.2024</span></header>
 <div class="cleanup"></div>
 <table class="infobox"><caption>Neku</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/8DvY9J4/neku.png640x360" data-description="Neku podczas koncertu w Montparnasse"> </td></tr><tr><td style="text-align: center;" colspan="2"> Neku podczas koncertu w <a href="https://grumqy.github.io/fangea/wiki/montparnasse/">Montparnasse</a>, 2024 </td></tr><tr><td colspan="2"><table class="ibox"><tbody></tbody></table></td></tr><tr><th><b>Data urodzenia</b></th><td> 6 październik 1987, <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezja</a> </td></tr><tr><th><b>Obywatelstwo</b></th><td> <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezyjskie</a> </td></tr><tr><th><b>Zawód</b></th><td> Piosenkarka, aktorka głosowa </td></tr><tr><th><b>Lata aktywności</b></th><td> Od 28 kwietnia 2007 </td></tr><tr><th style="text-align: center;" colspan="2"> <b>Kariera muzyczna</b></th></tr><tr><th><b>Gatunki</b></th><td> J-pop, elektryczna </td></tr><tr><th><b>Wytwórnia</b></th><td> <a href="https://grumqy.github.io/fangea/wiki/kanako/">Kanako</a> </td></tr><tr><th><b>Strona internetowa</b></th><td> <a href="https://grumqy.github.io/fangea/wiki/dobalekpl/">https://neku.mk/neku/</a> </td></tr></tbody></table>
