--- a/wiki/greenpay/index.html
+++ b/wiki/greenpay/index.html
@@ -28,10 +28,10 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Greenpay</div><span>05.11.2024</span></header>
-<table class="infobox"><caption>Greenpay Inc.</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/fxTTnsH/greenpay2.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> </td></tr><tr><th>Adres</th><td> οδ. Εμμανουήλ 52<br>Vounaria </td></tr><tr><th>Forma prawna</th><td> spółka publiczna </td></tr><tr><th>Prezes</th><td> Theronikos Erymantheas<br>(CEO) </td></tr><tr><th>Dyrektor</th><td> Lysandros Pherecleides </td></tr><tr><th>Zatrudnienie</th><td> 10 400 (2019) </td></tr><tr><th>Giełda</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> </td></tr><tr><th><a href="https://pl.wikipedia.org/wiki/International_Securities_Identification_Number">ISIN</a></th><td> LB000000GRP1 </td></tr><tr><th>Symbol akcji</th><td> GRP </td></tr></tbody></table>
+<header><div>Greenpay</div><span>27.02.2025</span></header>
+<table class="infobox"><caption>Greenpay Inc.</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/fxTTnsH/greenpay2.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/wounaria/">Wounaria</a> </td></tr><tr><th>Adres</th><td> οδ. Εμμανουήλ 52<br>Vounaria </td></tr><tr><th>Forma prawna</th><td> spółka publiczna </td></tr><tr><th>Prezes</th><td> Theronikos Erymantheas<br>(CEO) </td></tr><tr><th>Dyrektor</th><td> Lysandros Pherecleides </td></tr><tr><th>Zatrudnienie</th><td> 10 400 (2019) </td></tr><tr><th>Giełda</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> </td></tr><tr><th><a href="https://pl.wikipedia.org/wiki/International_Securities_Identification_Number">ISIN</a></th><td> LB000000GRP1 </td></tr><tr><th>Symbol akcji</th><td> GRP </td></tr></tbody></table>
 
-<p>Greenpay Inc. – Lemburska spółka i organizacja członkowska zajmująca się wydawaniem kart płatniczych, powstała w 1961 roku pod nazwą Green Card.</p>
+<p><b>Greenpay Inc.</b> – Lemburska spółka i organizacja członkowska zajmująca się wydawaniem kart płatniczych, powstała w 1961 roku pod nazwą Green Card.</p>
 
 <p>Greenpay Inc. zadebiutowała na <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> w kwietniu 2006 roku. W październiku 2000 została natomiast wyodrębniona organizacja Greenpay Fangea, mająca charakter stowarzyszenia banków członkowskich i zachowująca wyłączną licencję na markę Greenpay na Fangei.</p>
 
@@ -62,8 +62,6 @@
 
 <p>W 2000 roku różne międzynarodowe programy kartowe zjednoczyły się pod nazwą „Greenpay”. NGCI stała się Greenpay Lembourg, a IBCC – Greenpay Fangea. Nazwę Greenpay wybrał Erymanthos Drakos, pierwszy prezes NGCI, ze względu na jej uniwersalną rozpoznawalność.</p>
 
-<p>W 2024 roku, po przewrocie socjalistycznym Halandii, Greenpay zawiesiła wszystkie operacje biznesowe w Halandii.</p>
-
 <h1>Produkty Greenpay</h1>
 <ol><li>Greenpay Electro – do obsługi w urządzeniach elektronicznych (ATM i POS)</li>
 <li>Greenpay Classic, Silver, Gold, Platinum – karty wypukłe dla osób fizycznych</li>
@@ -77,7 +75,7 @@
  <div id="source-code" style="display:none;">{|infobox Greenpay Inc.
 |c=2 [[timg:https://i.ibb.co/fxTTnsH/greenpay2.png|Logo]] |
 ! Państwo !| [[icon:https://i.ibb.co/6ZKVq0q/lemburg.png|small]] (https://grumqy.github.io/fangea/wiki/lemburg/)[Lemburg] |
-! Siedziba !| (https://grumqy.github.io/fangea/wiki/vounaria/)[Vounaria] |
+! Siedziba !| (https://grumqy.github.io/fangea/wiki/wounaria/)[Wounaria] |
 ! Adres !| οδ. Εμμανουήλ 52<br>Vounaria |
 ! Forma prawna !| spółka publiczna |
 ! Prezes !| Theronikos Erymantheas<br>(CEO) |
@@ -88,7 +86,7 @@
 ! Symbol akcji !| GRP |
 |}
 
-Greenpay Inc. – Lemburska spółka i organizacja członkowska zajmująca się wydawaniem kart płatniczych, powstała w 1961 roku pod nazwą Green Card.
+'''Greenpay Inc.''' – Lemburska spółka i organizacja członkowska zajmująca się wydawaniem kart płatniczych, powstała w 1961 roku pod nazwą Green Card.
 
 Greenpay Inc. zadebiutowała na (https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/)[Vounaria Chrematistirio] w kwietniu 2006 roku. W październiku 2000 została natomiast wyodrębniona organizacja Greenpay Fangea, mająca charakter stowarzyszenia banków członkowskich i zachowująca wyłączną licencję na markę Greenpay na Fangei.
 
@@ -119,8 +117,6 @@ Logo Greenpay używane od 2014 roku</figcaption></figure>
 W 1978 roku BofL rozpoczęło licencjonowanie Green Card innym bankom w Lemburgu, tworząc sieć banków wspierających system. W 1985 roku Bank of Lembourg przekazał kontrolę nad programem nowo utworzonej organizacji National Green Card Inc. (NGCI). Międzynarodowe licencje zostały nadane bankom w 15 krajach, a w 1988 roku powstała Międzynarodowa Korporacja Kart Bankowych (IBCC) do zarządzania programem globalnym.
 
 W 2000 roku różne międzynarodowe programy kartowe zjednoczyły się pod nazwą „Greenpay”. NGCI stała się Greenpay Lembourg, a IBCC – Greenpay Fangea. Nazwę Greenpay wybrał Erymanthos Drakos, pierwszy prezes NGCI, ze względu na jej uniwersalną rozpoznawalność.
-
-W 2024 roku, po przewrocie socjalistycznym Halandii, Greenpay zawiesiła wszystkie operacje biznesowe w Halandii.
 
 = Produkty Greenpay =
 
