--- a/wiki/halandia/index.html
+++ b/wiki/halandia/index.html
@@ -30,14 +30,14 @@
 <article>
 <header><div>Halandia</div><span>08.09.2024</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>Halandzka Republika Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Den Halandiske Demokratiske Republik</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/GfXHXSv9/halandia.png" data-description="Flaga Halandii"></td><td><img src="https://i.ibb.co/rKFNnMM4/herb-halandia-halandii-nowy.png" data-description="Godło Halandii"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_halandii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_halandii/">Godło</a> </td></tr></tbody></table></td></tr></tbody></table>
+<table class="infobox"><caption>Halandzka Republika Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Den Halandiske Demokratiske Republik</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/GfXHXSv9/halandia.png" data-description="Flaga Halandii"></td><td><img src="https://i.ibb.co/hJ7Y8HMF/herb-halandia-halandii.png" data-description="Herb Halandii"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_halandii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_halandii/">Herb</a> </td></tr></tbody></table></td></tr></tbody></table>
 
 <p><b>Halandia</b>, <b>Halandzka Republika Demokratyczna</b> (duń. <i>Halland</i>, Den Halandiske Demokratiske Republik).</p>
  <div id="source-code" style="display:none;">{|infobox Halandzka Republika Demokratyczna
 !t=cc=2 ''Den Halandiske Demokratiske Republik'' !
 |{ibox
-|[[timg:https://i.ibb.co/GfXHXSv9/halandia.png|Flaga Halandii]] || [[timg:https://i.ibb.co/rKFNnMM4/herb-halandia-halandii-nowy.png|Godło Halandii]] |
-|t=c (https://grumqy.github.io/fangea/wiki/flaga_halandii/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/godło_halandii/)[Godło] |
+|[[timg:https://i.ibb.co/GfXHXSv9/halandia.png|Flaga Halandii]] || [[timg:https://i.ibb.co/hJ7Y8HMF/herb-halandia-halandii.png|Herb Halandii]] |
+|t=c (https://grumqy.github.io/fangea/wiki/flaga_halandii/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/herb_halandii/)[Herb] |
 }|
 |}
 
