--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="twitter:description" content="Profesjonalny roleplay o prowadzeniu własnego państwa.">
     <meta property="og:image" content="/fangea/local/fangeapage.png">
     <meta name="twitter:image" content="/fangea/local/fangeapage.png">
+    <meta name="keywords" content="fangea, inne kontynenty">
+    <meta name="robots" content="index, follow">
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
