--- a/prima.html
+++ b/prima.html
@@ -76,7 +76,7 @@
             </label>
             <div class="game-box" id="gameBox">
                 <p>Zagraj w grę przez 2 minuty, aby przejść weryfikację!</p>
-                <iframe src="LINK_DO_GRY" width="600" height="400" style="border:none;"></iframe>
+                <iframe src="https://www.kogama.com/games/play/9072135/" width="600" height="400" style="border:none;"></iframe>
             </div>
         </div>
     </div>
