--- a/prima.html
+++ b/prima.html
@@ -86,7 +86,7 @@
             </div>
             <div class="game-box" id="gameBox">
                 <p class="captcha-text">Zagraj w grę przez 2 minuty, aby przejść weryfikację!</p>
-                <iframe src="https://www.kogama.com/games/play/9072135/" width="600" height="400" style="border:none;"></iframe>
+                <iframe src="https://cobular.ct8.pl/play/mystic-valley/classic/" width="640" height="360" style="border:none;"></iframe>
             </div>
         </div>
     </div>
