--- a/prima.html
+++ b/prima.html
@@ -130,7 +130,7 @@
           let minutes = Math.floor(timeLeft / 60);
           let seconds = timeLeft % 60;
           timerElement.textContent = `${minutes}:${seconds < 10 ? "0" : ""}${seconds}`;
-          timerContainer.textContent = `Pozostań w grze przez: ${minutes}:${seconds < 10 ? "0" : ""}${seconds}, aby przejść weryfikację.`;
+          timerContainer.textContent = `Pozostań w grze przez: ${minutes}:${seconds < 10 ? "0" : ""}${seconds}`;
 
           if (timeLeft > 0) {
             timeLeft--;
