--- a/prima.html
+++ b/prima.html
@@ -106,7 +106,7 @@
       <!-- Stopka z miejscem na logo -->
       <div class="captcha-footer">
         <img src="https://i.ibb.co/xqMfTMQk/obraz-2025-03-31-201804392.png" alt="Captcha Logo"> <!-- TUTAJ DODAJ LOGO -->
-        <span>Ron Tyler Roundabout INC.</span>
+        <span>Tyler Verifier INC.</span>
       </div>
     </div>
   </div>
