--- a/prima.html
+++ b/prima.html
@@ -98,15 +98,14 @@
         </label>
       </div>
       <div class="game-box" id="gameBox">
-        <p class="captcha-text">Zagraj w grę przez 4 minuty, aby przejść weryfikację.</p>
         <iframe src="https://cobular.ct8.pl/play/mystic-valley/classic/" width="640" height="360" style="border:none;"></iframe>
       </div>
       <!-- Timer umieszczony nad stopką -->
       <div id="timerContainer" class="timer hidden"></div>
       <!-- Stopka z miejscem na logo -->
       <div class="captcha-footer">
-        <img src="https://i.ibb.co/xqMfTMQk/obraz-2025-03-31-201804392.png" alt="Captcha Logo"> <!-- TUTAJ DODAJ LOGO -->
-        <span>Tyler Verifier INC.</span>
+        <img src="https://i.ibb.co/xqMfTMQk/obraz-2025-03-31-201804392.png" alt="Captcha Logo">
+        <span>Ron Tyler Roundabout INC.</span>
       </div>
     </div>
   </div>
@@ -122,15 +121,13 @@
 
         // Ustawienie czasu na 4 minuty (240 sekund)
         let timeLeft = 240;
-        const timerElement = document.getElementById("timer");
         const timerContainer = document.getElementById("timerContainer");
 
         // Funkcja odliczająca czas
         function updateTimer() {
           let minutes = Math.floor(timeLeft / 60);
           let seconds = timeLeft % 60;
-          timerElement.textContent = `${minutes}:${seconds < 10 ? "0" : ""}${seconds}`;
-          timerContainer.textContent = `Pozostań w grze przez: ${minutes}:${seconds < 10 ? "0" : ""}${seconds}`;
+          timerContainer.textContent = `Pozostań w grze przez: ${minutes}:${seconds < 10 ? "0" : ""}${seconds}, aby przejść weryfikację.`;
 
           if (timeLeft > 0) {
             timeLeft--;
