--- a/prima.html
+++ b/prima.html
@@ -104,8 +104,8 @@
       <div id="timerContainer" class="timer hidden"></div>
       <!-- Stopka z miejscem na logo -->
       <div class="captcha-footer">
-        <img src="https://i.ibb.co/xqMfTMQk/obraz-2025-03-31-201804392.png" alt="Captcha Logo">
-        <span>Ron Tyler Roundabout INC.</span>
+        <img src="https://i.ibb.co/b5c0Rwwq/ron-tyler-emoji-nerd.png" alt="Captcha Logo">
+        <span>Tyler Verifier</span>
       </div>
     </div>
   </div>
