--- a/wiki/index.html
+++ b/wiki/index.html
@@ -52,6 +52,7 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/fankladonia/">Fankladonia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/halandia/">Halandia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/III_imperium_iznotiańskie/">III Imperium Iznotiańskie</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/królestwo_pamercji/">Królestwo Pamercji</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/martylia/">Martylia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/nadmrocze/">Nadmrocze</a></li>
