--- a/wiki/index.html
+++ b/wiki/index.html
@@ -67,6 +67,7 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/liwonia/">Liwonia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/taj-hoi/">Taj-Hoi</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/teran/">Teran</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/wielkie_królestwo_trojga_narodów/">Wielkie Królestwo Trojga Narodów</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/wizgard/">Wizgard</a></li>
             </ul> 
             <ul class="article-category">
