--- a/wiki/królestwo_pamercji/index.html
+++ b/wiki/królestwo_pamercji/index.html
@@ -6,9 +6,9 @@
 <title>Królestwo Pamercji - Fangea i inne kontynenty</title>
 <meta property="og:title" content="Królestwo Pamercji">
 <meta name="twitter:title" content="Królestwo Pamercji">
-<meta name="description" content="Królestwo Pamercji – państwo historyczne, położone w Fangei północnej, ze stolicą w Lipławiecku, istniejące w latach 1XXX–19XX.">
-<meta property="og:description" content="Królestwo Pamercji – państwo historyczne, położone w Fangei północnej, ze stolicą w Lipławiecku, istniejące w latach 1XXX–19XX.">
-<meta name="twitter:description" content="Królestwo Pamercji – państwo historyczne, położone w Fangei północnej, ze stolicą w Lipławiecku, istniejące w latach 1XXX–19XX.">
+<meta name="description" content="Królestwo Pamercji – państwo historyczne, położone w Fangei północnej, ze stolicą w Lipławiecku, istniejące w latach 1XXX–1972.">
+<meta property="og:description" content="Królestwo Pamercji – państwo historyczne, położone w Fangei północnej, ze stolicą w Lipławiecku, istniejące w latach 1XXX–1972.">
+<meta name="twitter:description" content="Królestwo Pamercji – państwo historyczne, położone w Fangei północnej, ze stolicą w Lipławiecku, istniejące w latach 1XXX–1972.">
 <meta property="og:image" content="https://i.ibb.co/TfBz4q9/flaga-pamercji-monarchia.png">
 <meta name="twitter:image" content="https://i.ibb.co/TfBz4q9/flaga-pamercji-monarchia.png">
 <meta property="og:image:width" content="4317">
@@ -29,9 +29,9 @@
 <article>
 <header><div>Królestwo Pamercji</div><span>05.04.2025</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>Królestwo Pamercji</caption><tbody><tr><td style="text-align: center;" colspan="2"> 1XXX–19XX </td></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td style="text-align: center;"> <img src="https://i.ibb.co/TfBz4q9/flaga-pamercji-monarchia.png" data-description="Flaga Pamercji"></td><td style="text-align: center;"> <img src="https://i.ibb.co/WNphCzwZ/pamercja-monarchia-herb-niebieskie.png" data-description="Herb Pamercji" width="85%"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_pamercji/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_pamercji/">Herb</a></td></tr></tbody></table></td></tr></tbody></table>
+<table class="infobox"><caption>Królestwo Pamercji</caption><tbody><tr><td style="text-align: center;" colspan="2"> 1XXX–1972 </td></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td style="text-align: center;"> <img src="https://i.ibb.co/TfBz4q9/flaga-pamercji-monarchia.png" data-description="Flaga Pamercji"></td><td style="text-align: center;"> <img src="https://i.ibb.co/WNphCzwZ/pamercja-monarchia-herb-niebieskie.png" data-description="Herb Pamercji" width="85%"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_pamercji/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_pamercji/">Herb</a></td></tr></tbody></table></td></tr></tbody></table>
 
-<p><b>Królestwo Pamercji</b> – <a href="https://pl.wikipedia.org/wiki/Państwo">państwo</a> <a href="https://pl.wikipedia.org/wiki/Historia">historyczne</a>, położone w <a href="https://grumqy.github.io/fangea/wiki/fangea_północna/">Fangei północnej</a>, ze stolicą w <a href="https://grumqy.github.io/fangea/wiki/lipławieck/">Lipławiecku</a>, istniejące w latach 1XXX–19XX.</p>
+<p><b>Królestwo Pamercji</b> – <a href="https://pl.wikipedia.org/wiki/Państwo">państwo</a> <a href="https://pl.wikipedia.org/wiki/Historia">historyczne</a>, położone w <a href="https://grumqy.github.io/fangea/wiki/fangea_północna/">Fangei północnej</a>, ze stolicą w <a href="https://grumqy.github.io/fangea/wiki/lipławieck/">Lipławiecku</a>, istniejące w latach 1XXX–1972.</p>
  <div id="source-code" style="display:none;">{|infobox Królestwo Pamercji
 |t=cc=2 1XXX–19XX |
 |{ibox
@@ -40,7 +40,7 @@
 }|
 |}
 
-'''Królestwo Pamercji''' – (https://pl.wikipedia.org/wiki/Państwo)[państwo] (https://pl.wikipedia.org/wiki/Historia)[historyczne], położone w (https://grumqy.github.io/fangea/wiki/fangea_północna/)[Fangei północnej], ze stolicą w (https://grumqy.github.io/fangea/wiki/lipławieck/)[Lipławiecku], istniejące w latach 1XXX–19XX.</div>
+'''Królestwo Pamercji''' – (https://pl.wikipedia.org/wiki/Państwo)[państwo] (https://pl.wikipedia.org/wiki/Historia)[historyczne], położone w (https://grumqy.github.io/fangea/wiki/fangea_północna/)[Fangei północnej], ze stolicą w (https://grumqy.github.io/fangea/wiki/lipławieck/)[Lipławiecku], istniejące w latach 1XXX–1972.</div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
