--- a/wiki/index.html
+++ b/wiki/index.html
@@ -107,6 +107,7 @@
             </ul> 
             <ul class="article-category">
                 <h1>Brak Kategorii</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/kanały_telewizyjne_w_pamercji/">Kanały telewizyjne w Pamercji</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/the_grimscape/">The Grimscape</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/województwo_pomerańskie/">Województwo pomerańskie</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/farnet/">FARNET</a></li>
