--- a/wiki/index.html
+++ b/wiki/index.html
@@ -90,6 +90,7 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/mmt_transport/">MMT Transport</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/kürzer/">Kürzer</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/paywall/">PayWall</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/top/">TOP</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/van_kirk/">Van Kirk</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/zaren/">Zaren</a></li>
             </ul> 
