--- a/radio/index.html
+++ b/radio/index.html
@@ -265,6 +265,12 @@
         main #radio-list ul a.genre_breakcore{
             display: contents; 
         }
+        main #radio-list ul a.genre_hardstyle{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_nightcore{
+            display: contents; 
+        }
         main #radio-list ul a.genre_randb{
             display: contents; 
         }
@@ -434,13 +440,15 @@
     <div>Filtruj wg gatunku</div>
     <ul>
         <form>
-        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_breakcore;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_altrock;genre_indierock;genre_metal;genre_info" checked>
+        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_breakcore;genre_hardstyle;genre_nightcore;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_altrock;genre_indierock;genre_metal;genre_info" checked>
         <input type="checkbox" id="genre_pop" checked>
         <input type="checkbox" id="genre_citypop" checked>
         <input type="checkbox" id="genre_electro" checked>
         <input type="checkbox" id="genre_hiphop" checked>
         <input type="checkbox" id="genre_breakbeat" checked>
         <input type="checkbox" id="genre_breakcore" checked>
+        <input type="checkbox" id="genre_hardstyle" checked>
+        <input type="checkbox" id="genre_nightcore" checked>
         <input type="checkbox" id="genre_randb" checked>
         <input type="checkbox" id="genre_lofi" checked>
         <input type="checkbox" id="genre_phonk" checked>
@@ -474,6 +482,12 @@
         </label>
         <label for="genre_breakcore" class="active">
             <li>Breakcore</li>
+        </label>
+        <label for="genre_hardstyle" class="active">
+            <li>Hardstyle</li>
+        </label>
+        <label for="genre_nightcore" class="active">
+            <li>Nightcore</li>
         </label>
         <label for="genre_randb" class="active">
             <li>R&B</li>
@@ -548,7 +562,13 @@
                 <a href="https://www.youtube.com/playlist?list=PLJ32iBqIDcZ_W6jL936Vjc7-98x7gflm1" class="lang_se genre_pop loc_montecydia">
                     <li>
                         <img src="https://i.ibb.co/dM2dJny/radiokolencydam2.png">
-                        <span>Radio Kolencydam</span>
+                        <span>Radio Kolenstad</span>
+                    </li>  
+                </a>
+                <a href="https://www.youtube.com/playlist?list=PLQK-CIQhtz9NLwXGQV11uzKLEMpO-FVoM" class="lang_ru genre_hardstyle genre_nightcore loc_ebengrad">
+                    <li>
+                        <img src="https://i.ibb.co/CKQhSbMJ/zfm-Obszar-roboczy-1.png">
+                        <span>ЖFM</span>
                     </li>  
                 </a>
         </ul>
